update login, sign up and log out